...
  //   }
  // }, []);

  return (
    <View
      className="justify-content: space-between flex-1"
      testID="intro_screen"
    >
      <View className="flex-1">
        <Image
          className="z-10 h-[100%] w-[100%] rounded-xl"
          source={require("./asset/banner.png")}
          contentFit="cover"
...
            title={t("login_screen.register")}
            containerClassName="bg-primary-default"
            textClassName="text-white"
            onPress={() => navigation.navigate("RegisterModal")}
          />
          <Button
            testID="intro_login_btn"
            title={t("login_screen.login")}
            containerClassName="border-primary-default border-[1px] ml-1"
            textClassName="text-primary-default"
            onPress={() => navigation.navigate("LoginScreen")}
          />
        </View>
...
