...
        onClosed={() => setIsShowLogoutModal(false)}
        title={t("dialog.logout.title") as string}
        confirmButtonLabel={`${t("dialog.logout.title")}`}
        confirmButtonColor="#FF4949"
        closeButtonLabel={`${t("dialog.logout.cancel")}`}
        description={t("dialog.logout.description") as string}
        confirmButtonTestID="logout_confirm_btn"
      />
      <ScrollView contentContainerStyle={{ flexGrow: 1 }}>
        <View className="flex flex-1 flex-col bg-gray-veryLight">
          <Settings navigation={navigation} />
        </View>
        <View className="mb-6 flex h-12 justify-end px-4">
          <Button
            title={t("user_settings_screen.logout")}
            containerClassName="bg-gray-medium flex-1"
            textClassName="text-white text-md leading-6"
            onPress={() => setIsShowLogoutModal(true)}
            testID="logout_btn"
          />
        </View>
      </ScrollView>
    </SafeAreaView>
  );
};
...
