...
          //         );
          //         setLastNotiIdToLocalStorage("");
          //         logout();
          //         userProfileStoreOnLogout();
          //       }, 500);
          //     }}
          //     testID="complete_profile_step_1_logout_button"
          //   />
          // ),
        })}
      />
      <CompleteProfileStack.Screen
        name="CompleteProfileStep2Screen"
...
                title="Complete profile"
                leftBtn={
                  <NavButton
                    text={t("button.back") || "Back"}
                    onPress={() => navigation.goBack()}
                    withBackIcon
                    testID="login_back_btn"
                  />
                }
                containerStyle="mt-0"
              />
            </ScreenWrapper>
          ),
...
